# Firework

./: .gitignore  .gitmodules  Cargo.toml  README.md  clippy-fmt.sh
.github/workflows/: rust.yml
crates/firework_adapter/: Cargo.toml
crates/firework_adapter/src/: lib.rs
crates/firework_compiler/: Cargo.toml
crates/firework_compiler/src/: lib.rs
crates/firework_dev/: Cargo.toml  README.md
crates/firework_dev/client/: build.gradle
crates/firework_dev/src/: lib.rs
crates/firework_macro/: Cargo.toml
crates/firework_macro/src/: lib.rs
crates/firework_macro/src/compiler/: common.rs  error.rs  flags.rs  mod.rs  prepare.rs  utils.rs  widgets.rs
crates/firework_macro/src/compiler/analyze/: components.rs  context.rs  expr.rs  hook.rs  item.rs  lifetime.rs  lifetime_manager.rs  mod.rs  pattern.rs  prepare.rs  spark.rs  statement.rs  widget.rs
crates/firework_macro/src/compiler/analyze/expr/: mod.rs  props.rs  spark.rs  widget.rs
crates/firework_macro/src/compiler/analyze/linter/: cycle_checker.rs  mod.rs  warnings.rs
crates/firework_macro/src/compiler/analyze/marks/: derived.rs  effect.rs  mod.rs  spark.rs  spark_ref.rs
crates/firework_macro/src/compiler/analyze/tests/: mod.rs  widgets.rs
crates/firework_macro/src/compiler/analyze/type_inference/: auto_type.rs  mod.rs  mut_check.rs
crates/firework_macro/src/compiler/analyze/utils/: check_expr.rs  hook.rs  reactive_block.rs  scope.rs
crates/firework_macro/src/compiler/analyze/visitor/: block.rs  element.rs  function.rs  item.rs  mod.rs  variable.rs
crates/firework_macro/src/compiler/analyze/visitors/: block.rs  closure.rs  element.rs  flow.rs  function.rs  item.rs  mod.rs  statement.rs  variable.rs
crates/firework_macro/src/compiler/analyze2/: context.rs  lifetime_manager.rs  mod.rs  spark.rs  type_checker.rs  widget.rs
crates/firework_macro/src/compiler/analyze2/marks/: mod.rs  spark.rs
crates/firework_macro/src/compiler/analyze2/visitor/: block.rs  element.rs  function.rs  mod.rs  statement.rs  variable.rs
crates/firework_macro/src/compiler/codegen/: actions.rs  base.rs  consts.rs  generator.rs  mod.rs  snapshot.rs
crates/firework_macro/src/compiler/codegen/code_builder/: cache.rs  mod.rs
crates/firework_macro/src/compiler/codegen/code_builder/nodes/: drop_spark.rs  dynamic_list.rs  initial_spark.rs  mod.rs  reactive_block.rs  spark_ref.rs  update_spark.rs  widget_block.rs
crates/firework_macro/src/compiler/codegen/generator/: base.rs  bitmask_gen.rs  chunk.rs  mod.rs  static_gen.rs
crates/firework_macro/src/compiler/codegen/generator/reactive/: bitmask_gen.rs  mod.rs
crates/firework_macro/src/compiler/codegen/ir/: actions.rs  mod.rs  reactive_block.rs  shared.rs  snapshot.rs  widget.rs
crates/firework_macro/src/compiler/codegen/lower/: macro_resolver.rs  mod.rs
crates/firework_macro/src/compiler/codegen/lower/visitors_mut/: assign.rs  block.rs  item.rs  mod.rs
crates/firework_macro/src/compiler/codegen/transform/: flash_pass.rs  macro_resolver.rs  mod.rs  reactive.rs  shared.rs  traits.rs  widgets_bitmask.rs
crates/firework_macro/src/compiler/codegen/transform/helpers/: desugaring.rs  dynamic_list.rs  flash_pass.rs  mod.rs  reactive.rs  shared.rs  widget_bitmask.rs
crates/firework_macro/src/compiler/codegen/transform/visitor/: item.rs  mod.rs
crates/firework_macro/src/compiler/codegen/transform/visitors/: block.rs  mod.rs
crates/firework_macro/src/compiler/codegen/transform/visitors_mut/: block.rs  item.rs  item_macro.rs  mod.rs  props.rs  self_visitor.rs  struct_visitor.rs
crates/firework_macro/src/compiler/common/: find_expr_attrs.rs  mod.rs
crates/sonic_layout/: Cargo.toml
crates/sonic_layout/src/: element.rs  lib.rs  template.rs
crates/sonic_layout/src/codegen/: mod.rs  (+2 more)
examples/example-app/: Cargo.toml
examples/example-app/src/: main.rs
examples/example-async/: Cargo.toml
examples/example-async/src/: main.rs
examples/example-component/: Cargo.toml
examples/example-component/src/: main.rs
examples/example-egui/: Cargo.toml
examples/example-egui/src/: adapter.rs  main.rs
examples/example-service/: Cargo.toml
examples/example-service/src/: main.rs
examples/example-simple/: Cargo.toml
examples/example-simple/src/: main.rs
examples/example-window/: Cargo.toml
examples/example-window/src/: main.rs
firework/: Cargo.toml
firework/src/: async_spark.rs  dyn_list.rs  element.rs  layout.rs  lib.rs  moon_bridge.rs  null_adapter.rs  prelude.rs  runtime_errors.rs  signals.rs  skins.rs  widget_tree.rs
firework/src/runtime/: async_spark.rs  dyn_list.rs  mod.rs
firework/src/std_widgets/: mod.rs  widget.rs
firework/tests/: base_widgets.rs  combine.rs  combine2.rs  spark.rs
firework/tests/common/: mod.rs
(+66 files in other folders)
