[workspace]
resolver = "2"
members = [
  "crates/firework_adapter",
  "crates/firework_macro",
  "examples/example-simple", "examples/example-window",
  "firework",
]

[profile.release]
lto = true
# target-cpu = "native"
debug = false
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
firework_ui = { path = "./firework" }
firework_macro = { path = "./crates/firework_macro" }
firework_adapter = { path = "./crates/firework_adapter" }
