[workspace]
resolver = "2"
members = ["examples/example-async",
  "crates/firework_adapter",
  "crates/firework_macro", "examples/example-async", "examples/example-component", "examples/example-egui", "examples/example-service",
  "examples/example-simple", "examples/example-window",
  "firework",
  "crates/firework_compiler",
  "crates/firework_dev",
]

[profile.release]
lto = true
# target-cpu = "native"
debug = false
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
firework_ui = { path = "./firework" }
firework_macro = { path = "./crates/firework_macro" }
firework_adapter = { path = "./crates/firework_adapter" }
firework_compiler = { path = "./crates/firework_compiler" }
firework_dev = { path = "./crates/firework_dev" }