[package]
name = "firework_ui"
version = "0.5.0"
edition = "2024"

[lib]
proc-macro = false

[features]
default = []
safety-multithread = ["firework_macro/safety-multithread"]
detail = ["firework_macro/debug_output"]

[dependencies]
firework_macro = { workspace = true }
firework_adapter = { workspace = true }
