[package]
name = "firework_ui"
version = "0.10.0"
edition = "2024"

[lib]
proc-macro = false

[features]
default = []
no-alloc = []
safety-multithread = []
detail = ["firework_macro/debug_output"]
trace = ["firework_macro/trace"]

[dependencies]
firework_macro = { workspace = true }
firework_adapter = { workspace = true }
