[package]
name = "firework_ui"
version = "0.12.0"
edition = "2024"

[lib]
proc-macro = false

[features]
default = []
no-alloc = []
safety-multithread = []
detail = ["firework_macro/debug_output"]
trace = ["firework_macro/trace"]
async = ["dep:tokio", "dep:futures", "dep:tokio-stream", "firework_macro/async"]

[dependencies]
firework_macro = { workspace = true }
firework_adapter = { workspace = true }

# Async feature only
tokio = { version = "1", optional = true, features = ["rt", "time", "sync"] }
futures = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }
