[package]
name = "firework_macro"
version = "0.15.2"
edition = "2024"

[lib]
proc-macro = true

[features]
default = []
safety-multithread = []
debug_output = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8"
prettyplease = "0.2"
petgraph = "0.7"
proc-macro-warning = "1.84.1"
