[package]
name = "firework_macro"
version = "0.19.5"
edition = "2024"

[lib]
proc-macro = true

[features]
default = []
safety-multithread = ["firework_compiler/safety-multithread"]
debug_output = ["firework_compiler/debug_output"]
trace = ["firework_compiler/trace"]
async = ["firework_compiler/async"]

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
firework_compiler = { workspace = true }
